# cards-rs

./: Cargo.toml  LICENSE  README.md
src/: card.rs  deck.rs  lib.rs  utils.rs
tests/: lib.rs
