[package]
name = "cards"
version = "1.1.2"
authors = ["Vladislav Supalov <v.supalov@gmail.com>"]
keywords = ["cards", "poker"]
description = "Reusable playing cards library for Rust."
homepage = "https://github.com/th4t/cards-rs"
license = "MIT"
readme = "README.md"

[lib]
name = "cards"

[dependencies]
rand = "0.3.12"
